# celltype_eval_llm

./: .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE.md  pyproject.toml  requirements.txt  setup.sh  test_installation.py
celltype_standardizer/: __init__.py  cli.py  evaluate.py  llm_judge.py  mapping_store.py  standardize.py
config/: README.md
evaluation/: BATCH_EVALUATION_README.md  CASSIA_EVALUATION_README.md  CASSIA_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  celltype_evaluation.ipynb  examples.py  run_evaluation.py  run_evaluation_biomaster.py  run_evaluation_biomni_batch.py  run_evaluation_cassia.py  run_evaluation_celltypeagent.py  run_evaluation_csv_single_file.py  run_evaluation_mllmcelltype.py
evaluation/batch_evaluation/: __init__.py  cassia_adapter.py  evaluator.py  file_matcher.py  file_matcher_cassia.py
evaluation/evaluation_results/: batch_summary.csv  batch_summary.json
evaluation/evaluation_results_biomaster/: batch_summary.csv  batch_summary.json
evaluation/evaluation_results_celltypeagent/: batch_summary.csv  batch_summary.json
evaluation/evaluation_results_mllmcelltype/: batch_summary.csv  batch_summary.json
evaluation/summary/: extract_results_summary.py  extract_results_summary_biomaster.py  extract_results_summary_biomni.py  (+7 more)
examples/: demo.ipynb
mappings/: l3_vocabulary copy.json  l3_vocabulary.json  l3_vocabulary_granular.json  l3_vocabulary_panuke.json  label_mappings copy.json  label_mappings.json  label_mappings_2026-03-08_1314.json  label_mappings_GT.json  label_mappings_granular.json
(+1221 files in other folders)
