[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "celltype-standardizer"
version = "1.0.0"
description = "Cell-type label standardization and evaluation for L3 taxonomy"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bioinformatics", "single-cell", "cell-type", "annotation", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "anndata>=0.9.0",
    "scanpy>=1.9.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
celltype-cli = "celltype_standardizer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/celltype_eval_llm"
Documentation = "https://github.com/yourusername/celltype_eval_llm/README.md"
Repository = "https://github.com/yourusername/celltype_eval_llm"

[tool.setuptools]
packages = ["celltype_standardizer"]
